src/test/resources/fixtures/parser/solidity_official_tests/shouldFail/constant_is_keyword.sol
contract Foo {
  uint constant = 4;